--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -41,9 +41,9 @@
     <main class=" ">
         <div class="mt-5 hero-back   p-3">
             <div class="col  ">
-                <h3 class="title_h3 m-0 text-align-center" style="text-align: center;
+                <h3 class="title_h3 m-0 text-align-center fs-1" style="text-align: center;
                 font-weight: 600;
-                font-size: 50px;">Paws-itively the Best Dog Walking Service in Town</h3>
+                ">Paws-itively the Best Dog Walking Service in Town</h3>
               
             </div>
                  
@@ -87,7 +87,7 @@
                     <p class="card-details">I can also provide dog sitting services, which means they will stay at your home and take care of your dog while you're away. This can include feeding, walking, and playing with your dog.</p>
                 </div>
                 <div style="text-transform: uppercase; " class="card col-lg p-3 dog-hover border-light rounded-4">
-                    <h2 class="card-title">Dropping</h2>
+                    <h2 class="card-title">Drop-in</h2>
                     <p class="card-details">I can also provide dog sitting services, which means they will stay at your home and take care of your dog while you're away. This can include feeding, walking, and playing with your dog.</p>
                 </div>
                 <div style="text-transform: uppercase; " class="card col-lg p-3 dog-hover border-light rounded-4">
