--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -57,11 +57,11 @@
                 <div class="col-lg-5">
                     <h3 class="title_h3" style="font-weight: 700;">Nicolle Rodas</h3>
                     <P class="hero_text3">I am a experienced and passionate dog walker who love nothing more than
-                        getting out and about with our furry friends. We offer a variety of services.
-                        We are committed to providing the highest level of care for your pets. We will always go the extra
+                        getting out and about with our furry friends. I offer a variety of services.
+                        I are committed to providing the highest level of care for your pets. I will always go the extra
                         mile to make sure that your dog is happy, healthy, and well-exercised.
-                        We are confident that you will be happy with our services. We offer a 100% satisfaction guarantee,
-                        so you can book with confidence
+                        I are confident that you will be happy with our services. I offer a 100% satisfaction guarantee,
+                        so you can book with confidence.
                     </P>
                         <a class="hero_btn col" style="width: 50% !important;
                         display: block;
@@ -84,7 +84,7 @@
 
                 <div style="text-transform: uppercase; " class="card col-lg p-3 dog-hover border-light rounded-4">
                     <h2 class="card-title">Dog sitting</h2>
-                    <p class="card-details">I can also provide dog sitting services, which means they will stay at your home and take care of your dog while you're away. This can include feeding, walking, and playing with your dog.</p>
+                    <p class="card-details ">I can also provide dog sitting services, which means they will stay at your home and take care of your dog while you're away. This can include feeding, walking, and playing with your dog.</p>
                 </div>
                 <div style="text-transform: uppercase; " class="card col-lg p-3 dog-hover border-light rounded-4">
                     <h2 class="card-title">Drop-in</h2>
@@ -98,7 +98,7 @@
             </div>
         </section>
         <section id="dog_reviews" class=" dog_reviews">
-            <h4 class="align-items-center text-center p-5 fs-1" style="font-weight: 700;">Dogs Walked</h4>
+            <h4 class="align-items-center text-center p-5 fs-1" style="font-weight: 700;">Doggie Gallery</h4>
             <section class="row gap-3 align-items-center justify-content-evenly ">
                 <!-- <div class="card p-2 border-light rounded-4 dog-hover" style="width:30rem; ">
                     <img src="./images/dog1.jpg" alt="">
