added the new picture

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -50,7 +50,7 @@
             <section class="section-1  row align-items-center justify-content-center introduction">
                 <div class="col-md-4 mt-5 align-item-center">
     
-                    <img src="./images/avatar.png" class=""  width="80%" alt="">
+                    <img src="./images/avatar.jpeg" class=""  width="80%" alt="">
     
                 </div>
                 <div class="col-lg-1"></div>
