--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="../src/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/src/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="../fontawesome-free-6.3.0-web/css/fontawesome.css" rel="stylesheet">
-    <link href="../fontawesome-free-6.3.0-web/css/brands.css" rel="stylesheet">
-    <link href="../fontawesome-free-6.3.0-web/css/solid.css" rel="stylesheet">
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+    <link href="./fontawesome-free-6.3.0-web/css/fontawesome.css" rel="stylesheet">
+    <link href="./fontawesome-free-6.3.0-web/css/brands.css" rel="stylesheet">
+    <link href="./fontawesome-free-6.3.0-web/css/solid.css" rel="stylesheet">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 </head>
 
 <body>
@@ -177,7 +177,7 @@
         </div>
 
     </footer>
-    <script src="../bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="./bootstrap/js/bootstrap.bundle.js"></script>
 
 <script>
     const toastTrigger = document.getElementById('liveToastBtn')
